--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
 
 body {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 100vh;
+    flex-direction: column;
+    /* row-gap: 30px; */
 }
 .cells__wrapper {
-
     width: 450px;
     height: 450px;
     border: 1px solid black;
@@ -16,10 +17,7 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    background-color: lavender;
-
-    
-  
+    background-color: lavender;  
 }
 
 .field {
@@ -44,7 +42,200 @@ body {
 }
 
 .cell-hidden {
-    visibility: hidden;
+    opacity: 0;
 }
 
 
+
+@keyframes sheen {
+  0% {
+    transform: skewY(-45deg) translateX(0);
+  }
+  100% {
+    transform: skewY(-45deg) translateX(12.5em);
+  }
+}
+
+.menu__btn {
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  color: purple;
+  border: 2px solid lavender;
+  font-size: 24px;
+  display: inline-block;
+  border-radius: 0.3em;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  overflow: hidden;
+  background-color: transparent;
+  
+  
+  
+}
+.menu__btn:before {
+    content: "";
+    background-color:lavender;
+    height: 100%;
+    width: 3em;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: -4.5em;
+    transform: skewX(-45deg) translateX(0);
+    transition: none;
+  }
+
+.menu__btn:hover {
+    cursor: pointer;
+    background-color: lavender;
+    color: #fff;
+    border-bottom: 4px solid darken(lavender, 10%);    
+}
+
+.menu__btn:hover:before {
+    transform: skewX(-45deg) translateX(13.5em);
+    transition: all 0.5s ease-in-out;
+}
+
+.menu__wrapper {
+    display: none;
+    /* display: flex; */
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 5;
+    align-items: center;
+    justify-content: center;
+    background: rgba(41, 41, 41, 0.6);
+    cursor: pointer;
+}
+
+.menu__list {
+    width: 400px;
+    height: 400px;
+    background-color: white;
+    list-style-type: none;
+    font-size: 25px;
+    text-align: center;
+    padding: 0;
+}
+.menu__list__item {
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    column-gap: 20px;
+    margin-top: 30px;
+}
+
+.game__wrapper {
+    display: flex;
+    width: 450px;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {display:none;}
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: purple;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px purple;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+  @media (max-width: 1279px) {
+    .cell {       
+        width: 70px;
+        height: 70px;
+        font-weight: 30px;        
+    }
+    .cells__wrapper {
+        width: 330px;
+        height: 330px;
+       
+    }
+    
+    .field {
+        width: 310px;
+        height: 310px;
+        
+    }
+
+  
+  }
+
+  @media (max-width: 767px) {
+    .cell {       
+        width: 50px;
+        height: 50px;
+        font-weight: 20px;        
+    }
+    .cells__wrapper {
+        width: 250px;
+        height: 250px;
+       
+    }
+    
+    .field {
+        width: 230px;
+        height: 230px;
+        
+    }
+    .game__wrapper {
+        width: 280px;
+    }
+
+  
+  }
